naming, remove preload

--- a/html/FileCompareForm.html
+++ b/html/FileCompareForm.html
@@ -16,7 +16,7 @@
         <input type="file" id="File2" />
         <br/><br/>
 
-        <button type="button" id="button">Show</button>
+        <button type="button" id="button">Compare</button>
     </form>
     <div id="result"></div>
     <script src="../javatypescript/dist/FileHelper.js"></script> 
