--- a/html/selection.html
+++ b/html/selection.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Selection</title>
+    <style>
+        #fileList div {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Selection</h1>
+    <h1>Select Files</h1>
     <div id="fileList"></div>
     <button id="submitSelection">Submit Selection</button>
     <script type="module" src="../javatypescript/dist/Selection.js"></script>
